--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -4,3 +4,53 @@ Add styles or override variables from the theme here.
 
 */
 
+
+.td-box--primary .td-arrow-down::before, .td-box--1 .td-arrow-down::before{
+    border-color: #2F3061 transparent transparent transparent !important;
+
+}
+.td-box--primary {
+    background-color: #2F3061 !important;
+}
+
+.td-box--1 {     background-color: #2F3061 !important; }
+.td-box--2 {     background-color: #201A23 !important; }
+
+
+.td-box--dark {
+    background-color: #343434 !important;
+
+}
+
+.td-box--3 {
+    color: #fff !important;
+    background-color: #5F5980 !important;
+
+}
+
+.td-navbar {
+    background: #5F5980 !important;
+}
+
+.navbar-bg-onscroll {
+    background: #5F5980 !important;
+
+}
+.td-box--4 {
+    background-color: #DFDFDF !important;
+
+}
+
+
+
+.btn-primary {
+    background: #5F5980 !important;
+    border-color:  #5F5980 !important;
+
+}
+
+.btn-secondary {
+    background: #657DC2 !important;
+    border-color:  #657DC2 !important;
+
+}
