--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -4,6 +4,12 @@ Add styles or override variables from the theme here.
 
 */
 
+$enable-gradients: true;
+$enable-rounded: false;
+$enable-shadows: true;
+$google_font_name: "Alata";
+$google_font_family: "Alata:300,300i,400,400i,700,700i";
+
 
 .td-box--primary .td-arrow-down::before, .td-box--1 .td-arrow-down::before{
     border-color: #2F3061 transparent transparent transparent !important;
